# editorconfig-ctest

./: .editorconfig  .editorconfigignore  .travis.yml  CHANGELOG  LICENSE  README.md  editorconfig-ctest  editorconfig-ctest.1  meson.build
tests/: .editorconfig  charset_utf_8_test  end_of_line_cr_test  end_of_line_cr_test_fail  end_of_line_crlf_test  end_of_line_crlf_test_fail  end_of_line_lf_test  end_of_line_lf_test_fail  indent_style_space_test  indent_style_space_test_fail  indent_style_tab_test  indent_style_tab_test_fail  insert_final_newline_true_test  insert_final_newline_true_test_fail  max_line_length_w_tabs_test  max_line_length_w_tabs_test_fail  max_line_length_wo_tabs_test  max_line_length_wo_tabs_test_fail  meson.build  trim_trailing_whitespace_false_test  trim_trailing_whitespace_true_test  trim_trailing_whitespace_true_test_fail
